--- a/source.yml
+++ b/source.yml
@@ -3,3 +3,5 @@ name: rock.vscode
 version_control:
   - tools/vera:
     github: verateam/vera
+  - tools/rock_vera:
+    github: rock-core/rock_vera
